# MacTok

./: .gitignore  Cargo.toml  README.md  azure-pipelines.yml
.cargo/: config.toml
benches/: example_benches.rs
src/: blind_sig.rs  keys.rs  lib.rs  params.rs  prover_server.rs  server.rs  ticket.rs  token.rs  utils.rs  verifier_client.rs
src/tests/: keys_tests.rs  mod.rs  params_tests.rs  redemption_tests.rs
tools/: cgmanifest.json
