[package]
name = "MacTok"
version = "0.1.0"
edition = "2021"

[lib]
name = "mactok"
path = "src/lib.rs"
test = true
bench = true
doc = true
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek-ng = { version = "4.1", features = ["std", "simd_backend", "serde"]}
sha2 = "0.9"
rand = "0.8"
rand_core = "0.6"
serde = "1"
lazy_static = "1.4.0"

[dev-dependencies]
serde_json = "1"
criterion = "0.3"

[[bench]]
name = "example_benches"
harness = false
